--- a/script.ipynb
+++ b/script.ipynb
@@ -4,7 +4,11 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM56L6kvgEkG+LBo7j8biQg",
+      "collapsed_sections": [
+        "kDwaZe4UQmL2",
+        "AT-7eWs1QgNw"
+      ],
+      "authorship_tag": "ABX9TyOYce5Z+Fxe1+uJaS5aTV/R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +47,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KLbBUrCqOlXB",
-        "outputId": "ae6babee-68f4-4dde-ff88-c4a5e4ba6512"
+        "outputId": "20ee4ede-89ba-4119-e9cb-5dcce9456ab6"
       },
       "outputs": [
         {
@@ -63,14 +67,13 @@
         "!apt install mongodb >log\n",
         "!service mongodb start\n",
         "\n",
-        "from pymongo import MongoClient\n",
-        "import pandas as pd"
+        "from pymongo import MongoClient"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Reading dataset and creating Pymongo client"
+        "# Creating Pymongo client"
       ],
       "metadata": {
         "id": "AT-7eWs1QgNw"
@@ -100,105 +103,13 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "aluno = {'matricula': '20220041044', 'ano_ingresso': '2022', 'periodo_ingresso': '1', 'id_curso': '92127264', 'id_unidade': '6069', 'id_unidade_gestora': '605', 'nome_discente': 'RAQUEL DA COSTA FREIRE', 'sexo': 'F', 'forma_ingresso': 'SiSU', 'tipo_discente': 'REGULAR', 'status': 'ATIVO', 'sigla_nivel_ensino': 'G', 'nivel_ensino': 'GRADUAÇÃO', 'nome_curso': 'TECNOLOGIA DA INFORMAÇÃO', 'modalidade_educacao': 'PRESENCIAL', 'nome_unidade': 'INSTITUTO METROPOLE DIGITAL', 'nome_unidade_gestora': 'UNIVERSIDADE FEDERAL DO RIO GRANDE DO NORTE'}"
+        "# Creating Pymongo Collection and inserting data from csv file"
       ],
       "metadata": {
-        "id": "WqUV6W60M0Bk"
-      },
-      "execution_count": 39,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "alunos = db.alunos_ufrn\n",
-        "aluno_id = alunos.insert_one(aluno).inserted_id"
-      ],
-      "metadata": {
-        "id": "2OLdHI8bRHGR"
-      },
-      "execution_count": 40,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "aluno_id"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jMWDOpceTEH7",
-        "outputId": "d05890ac-1e4c-4c7f-ca4b-574fb52988b2"
-      },
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "ObjectId('639698e3a38c1a37829eda10')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 41
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "db.list_collection_names()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "OJ2i6KlDJUUC",
-        "outputId": "c2e718b3-0573-47ef-f015-005330e2da12"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pprint\n",
-        "# pprint.pprint(alunos.find_one({'periodo_ingresso': '1'}))\n",
-        "pprint.pprint(alunos.find())\n",
-        "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "C5rMY3ImLN1z",
-        "outputId": "93ce45c5-4116-4fbd-fa91-8ed3fd605577"
-      },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<pymongo.cursor.Cursor object at 0x7fe4437e8f10>\n"
-          ]
-        }
-      ]
+        "id": "pNecayiMd5Wm"
+      }
     },
     {
       "cell_type": "code",
@@ -219,16 +130,195 @@
       "metadata": {
         "id": "19hrh3_lZ_Vt"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        " "
+        "# Checks if colletion alunos_ufrn was added to database\n",
+        "db.list_collection_names()"
       ],
       "metadata": {
-        "id": "W_4NLcUYxI1r"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rhg1pEdYdl7Z",
+        "outputId": "70aa61a5-85ee-458c-edec-6c047478eebe"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['alunos_ufrn']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Simple query to check if data is loaded\n",
+        "import pprint\n",
+        "pprint.pprint(alunos.find_one())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bJaHGGKUeDMF",
+        "outputId": "aba2242a-81a9-42fc-fba9-4380d44c1474"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'_id': ObjectId('6396e736572a67bcf0b7b4c4'),\n",
+            " 'ano_ingresso': '2022',\n",
+            " 'forma_ingresso': 'SiSU',\n",
+            " 'id_curso': '2071220',\n",
+            " 'id_unidade': '445',\n",
+            " 'id_unidade_gestora': '445',\n",
+            " 'matricula': '20220017174',\n",
+            " 'modalidade_educacao': 'PRESENCIAL',\n",
+            " 'nivel_ensino': 'GRADUAÇÃO',\n",
+            " 'nome_curso': 'ENGENHARIA DE PETRÓLEO',\n",
+            " 'nome_discente': 'AARON VINICIUS MAIA SOBRINHO',\n",
+            " 'nome_unidade': 'CENTRO DE TECNOLOGIA',\n",
+            " 'nome_unidade_gestora': 'CENTRO DE TECNOLOGIA',\n",
+            " 'periodo_ingresso': '1',\n",
+            " 'sexo': 'M',\n",
+            " 'sigla_nivel_ensino': 'G',\n",
+            " 'status': 'ATIVO',\n",
+            " 'tipo_discente': 'REGULAR'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 1. Listar todos os alunos que ingressaram por meio do SiSU"
+      ],
+      "metadata": {
+        "id": "bj2omDPgeV1y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "alunos_sisu = alunos.find({'forma_ingresso': 'SiSU'})\n",
+        "for aluno in alunos_sisu:\n",
+        "  pprint.pprint(aluno)\n",
+        "  "
+      ],
+      "metadata": {
+        "id": "-KBv5HjYeyly"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2. Listar todos os alunos que ingressaram no mestrado"
+      ],
+      "metadata": {
+        "id": "oaH5mTMUecWS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "alunos_mestrado = alunos.find({'nivel_ensino': 'MESTRADO'})\n",
+        "for aluno in alunos_mestrado:\n",
+        "  pprint.pprint(aluno)"
+      ],
+      "metadata": {
+        "id": "YjePej5ElSyK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 3. Listar todos os alunos de uma unidade gestora"
+      ],
+      "metadata": {
+        "id": "oGIO-wOZef6T"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "unidade_gestora = 'CENTRO DE TECNOLOGIA'\n",
+        "alunos_unidade_gestora = alunos.find({'nome_unidade_gestora': 'unidade_gestora'})\n",
+        "for aluno in alunos_unidade_gestora:\n",
+        "  pprint.pprint(aluno)\n"
+      ],
+      "metadata": {
+        "id": "bnSGzoF8lazJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 4. Listar todos os alunos regulares"
+      ],
+      "metadata": {
+        "id": "WGY09r-DeidT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "alunos_regulares = alunos.find({'tipo_discente': 'REGULAR'})\n",
+        "for aluno in alunos_regulares:\n",
+        "  pprint.pprint(aluno)"
+      ],
+      "metadata": {
+        "id": "UFNUfQEuluLC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 5. Listar todos os alunos pelo status (cancelado, ativo, etc.)"
+      ],
+      "metadata": {
+        "id": "-qJiandyemm8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "status_unique = ['ATIVO', 'CANCELADO', 'TRANCADO', 'CONCLUÍDO', 'CADASTRADO']\n",
+        "\n",
+        "alunos_todos_status = dict()\n",
+        "\n",
+        "#Cria dicionário de queries\n",
+        "for status in status_unique:\n",
+        "  alunos_status = alunos.find({'status': status})\n",
+        "  alunos_todos_status[status] = alunos_status\n",
+        "\n",
+        "#imprime um status específico\n",
+        "for aluno in alunos_todos_status['TRANCADO']:\n",
+        "    pprint.pprint(aluno)"
+      ],
+      "metadata": {
+        "id": "_ay6mdK3mS4o"
       },
       "execution_count": null,
       "outputs": []
